--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "wrangler publish --env production",
+    "postbuild": "echo build finished"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -80,6 +82,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "wrangler": "^4.40.2"
   }
 }
